# RepoWithProjects

./: .gitignore  README.md
cpp-projects/: .clang-tidy  CMakeLists.txt  readme.md
cpp-projects/biginteger/: CMakeLists.txt  README.md  biginteger.hpp  readme.md
cpp-projects/biginteger/src/: biginteger.cpp
cpp-projects/biginteger/tests/: playground.cpp  public_test.cpp
cpp-projects/deque/: CMakeLists.txt  deque.hpp  readme.md  test.cpp
cpp-projects/deque/src/: Iterator.tpp  deque.tpp
cpp-projects/function/: CMakeLists.txt  function.hpp  readme.md
cpp-projects/function/test/: common.hpp  test_function.cpp  test_move_only_function.cpp
cpp-projects/geometry/: CMakeLists.txt  geometry.hpp  readme.md
cpp-projects/geometry/src/: Circle.cpp  Circle.hpp  Ellipse.cpp  Ellipse.hpp  Line.cpp  Line.hpp  Point_Vector.cpp  Point_Vector.hpp  Polygon.cpp  Polygon.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp
cpp-projects/geometry/tests/: playground.cpp  public_test.cpp
cpp-projects/list/: CMakeLists.txt  list.hpp  pool_allocator.hpp  readme.md
cpp-projects/list/test/: benchmark.cpp  common.hpp  fuzzy.cpp  stack_allocation.hpp  test_allocator.cpp  test_list.cpp  test_list_move.cpp
cpp-projects/rational/: CMakeLists.txt  rational.hpp  readme.md
cpp-projects/rational/src/: rational.cpp
cpp-projects/rational/tests/: playground.cpp  public_test.cpp
cpp-projects/smart-pointers/: CMakeLists.txt  readme.md  smart_pointers.hpp
cpp-projects/smart-pointers/test/: test_esft.cpp  test_shared.cpp  test_weak.cpp
cpp-projects/tuple/: CMakeLists.txt  readme.md  test.cpp  tuple.hpp
cpp-projects/unordered-map/: CMakeLists.txt  readme.md  unordered_map.hpp
cpp-projects/unordered-map/src/: list.hpp
cpp-projects/unordered-map/test/: perf.cpp  test.cpp
devops-projects/: readme.md
devops-projects/ci-pipeline/: .gitlab-ci.yml  readme.md
devops-projects/cmake-big/: CMakeLists.txt  README.md
devops-projects/cmake-big/docs/: clion.md  vscode.md
devops-projects/cmake-big/drachenland/: CMakeLists.txt
devops-projects/cmake-big/drachenland/fiery/: orange_dragon.cpp  orange_dragon.hpp  red_dragon.cpp
devops-projects/cmake-big/drachenland/fury/: toothless.h
devops-projects/cmake-big/drachenland/icy/: blue_dragon.cpp
devops-projects/cmake-big/train/: trench.cpp
devops-projects/cmake-big/utils/: breath_power.hpp  includeLint.py
devops-projects/cmake-dragons/: CMakeLists.txt  README.md  readme.md
devops-projects/cmake-dragons/arena/: CMakeLists.txt  battle.cpp
devops-projects/cmake-dragons/cmake/: FindDRAGONS.cmake
devops-projects/cmake-dragons/drachenland/fiery/: red_dragon.hpp
devops-projects/cmake-dragons/drachenland/fury/: toothless.c
devops-projects/cmake-dragons/drachenland/icy/: blue_dragon.hpp
devops-projects/cmake-dragons/train/: CMakeLists.txt  train.cpp
devops-projects/docker-compose/: docker-compose.yml  readme.md
devops-projects/docker-compose/backend/: base.py  init_db.py
devops-projects/docker-compose/docker/: backend.Dockerfile
devops-projects/docker-compose/frontend/: nginx.conf
devops-projects/google-test-mock/: CMakeLists.txt  readme.md
devops-projects/google-test-mock/examples/: 01-main.cpp  CMakeLists.txt
devops-projects/google-test-mock/include/: Weather.h
devops-projects/google-test-mock/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
devops-projects/google-test-mock/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
devops-projects/google-test-mock/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h  current_moscow.json  forecast_moscow.json  location_moscow.json
